# fastapi-cloud-logging

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.cfg
.github/: dependabot.yml
.github/workflows/: publish.yml  test.yaml
example/logger_app/: Dockerfile  app.yaml  requirements.txt
example/logger_app/src/: root.py
example/loguru_app/: requirements.txt
example/loguru_app/src/: main.py  root.py
example/src/: main.py
fastapi_cloud_logging/: __init__.py  fastapi_cloud_logging_handler.py  request_logging_middleware.py  utils.py
tests/: test_fastapi_cloud_logging_handler.py  test_logger.py  test_loguru.py  test_request_logging_middleware.py  test_utils.py
