[tool.poetry]
name = "fastapi-cloud-logging"
version = "0.8.0"
description = ""
authors = ["quoth"]

[tool.poetry.dependencies]
python = "^3.7,^3.8,^3.9,^3.10"
fastapi = "^0.73.0"
google-cloud-logging = "^3.0.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
isort = "^5.10.1"
black = "^22.1.0"
pytest = "^7.0.1"
pytest-mock = "^3.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.flake8]
max-line-length = 120

[tool.isort]
line_length = 120

[tool.pytest.ini_options]
addopts = [
  "--strict-config",
  "--strict-markers",
]
xfail_strict = true
filterwarnings = [
    "error",
    # TODO: needed by asyncio in Python 3.9.7 https://bugs.python.org/issue45097, try to remove on 3.9.8
    'ignore:Call to deprecated create function FieldDescriptor',
    'ignore:Call to deprecated create function Descriptor',
    'ignore:Call to deprecated create function EnumDescriptor',
    'ignore:Call to deprecated create function EnumValueDescriptor',
    'ignore:Call to deprecated create function FileDescriptor',
    'ignore:Call to deprecated create function OneofDescriptor'
]